# CSC3050-Projects

./: README.md
Project1/: .gitignore  CMakeLists.txt  README.md  testfile.asm  testfile2.asm
Project1/headers/: LabelTable.h  MipsIcom.h  MipsJCom.h  MipsRCom.h  MipsVar.h  Phase1.h  Phase2.h
Project1/src/: LabelTable.cpp  MipsIcom.cpp  MipsJCom.cpp  MipsRCom.cpp  MipsVar.cpp  Phase1.cpp  Phase2.cpp  tester.cpp
Project2/: .gitignore  CMakeLists.txt  README.md
Project2/src/: DataSegment.cpp  DataSegment.h  Dump.cpp  Dump.h  Execution.cpp  Execution.h  ICommand.cpp  ICommand.h  JCommand.cpp  JCommand.h  RCommand.cpp  RCommand.h  TextSegment.cpp  TextSegment.h  tester.cpp  tester.h
Project3/: .gitignore  README.md  makefile
Project3/src/: ALU.v
Project3/test/: test.v
Project4/: .gitignore  README.md  makefile
Project4/include/: InstructionRAM.v  MainMemory.v
Project4/src/: CPU.v  EX.v  EX_MEM.v  ID.v  ID_EX.v  IF_ID.v  MEM.v  MEM_WB.v  driver.v  pc.v  stall_gen.v  testBench.v
Project4/test/: mips1.asm
